--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mcms-node-eager-loader",
   "description": "mcms node eager loading module",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "keywords": [
     "mcms",
     "eager-loading"
@@ -25,7 +25,7 @@
   "readmeFilename": "readme.md",
   "main": "./lib/index",
   "dependencies": {
-    "lodash": "~2.4.1",
-    "async": "~0.9.0"
+    "async": "~0.9.0",
+    "lodash": "^3.7.0"
   }
 }
